# usaschooldata

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  buf.gen.yaml  docker-compose.yml  mise.toml
.github/workflows/: deploy-api.yaml  deploy-app.yaml  pr-deploy.yaml
api/: .dockerignore  .gitignore  Dockerfile  README.md  config.go  cors.go  db.go  directory.go  fly.toml  go.mod  go.sum  handler.go  logger.go  main.go  membership.go
api/directory/v1/: directory.pb.go
api/membership/v1/: membership.pb.go
api/sql/: enrollment_summary.sql  get_school.sql  historical_enrollment.sql  search_directory.sql
app/: .env.example  .prettierrc.cjs  Dockerfile  Dockerfile.dev  fly.toml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  constants.ts  index.css
app/src/components/: CopyableWrapper.tsx  Footer.tsx  GradeBand.tsx  Header.tsx  Home.tsx  LocationMap.tsx  Profile.tsx  SQLViewer.tsx  Search.tsx
app/src/hooks/: useApiGradeData.ts  useApiHistoricalEnrollment.ts  useApiProfileData.ts  useBlendedHistoricalEnrollment.ts  useBlendedProfileData.ts  useDuckDB.ts  useGradeData.ts  useHistoricalEnrollment.ts  useProfileData.ts  useSchoolDirectory.ts  useSchoolSearch.ts
app/src/services/: apiClient.ts  apiService.ts  apiTransformers.ts  dataService.ts  duckdb.ts
app/src/utils/: sqlQueries.ts
elt/: .dockerignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
elt/elt/: constants.py  io.py  utils.py
elt/schemas/: config.yml  membership.yml
elt/sql/: directory.sql  membership.sql
(+8 files in other folders)
